runs/official/csb_sdlc_fix_haiku_20260303_175203/mcp-remote-direct/2026-03-03__17-52-14/mcp_element-web-roomheaderbutton__updJJZC/verifier/test-stdout.txt
=== SWE-bench Pro Evaluation ===
Working directory: /app
Config file found at /tests/config.json
Instance ID: unknown
Base commit: unknown
Repo language: unknown
Git status:
fatal: detected dubious ownership in repository at '/app'
To add an exception for this directory, call:

	git config --global --add safe.directory /app
Not a git repository
Applying test patch to set up test environment...
error: unknown option `allow-empty'
usage: git apply [<options>] [<patch>...]

    --exclude <path>      don't apply changes matching the given path
    --include <path>      apply changes matching the given path
    -p <num>              remove <num> leading slashes from traditional diff paths
    --no-add              ignore additions made by the patch
    --stat                instead of applying the patch, output diffstat for the input
    --numstat             show number of added and deleted lines in decimal notation
    --summary             instead of applying the patch, output a summary for the input
    --check               instead of applying the patch, see if the patch is applicable
    --index               make sure the patch is applicable to the current index
    -N, --intent-to-add   mark new files with `git add --intent-to-add`
    --cached              apply a patch without touching the working tree
    --unsafe-paths        accept a patch that touches outside the working area
    --apply               also apply the patch (use with --stat/--summary/--check)
    -3, --3way            attempt three-way merge if a patch does not apply
    --build-fake-ancestor <file>
                          build a temporary index based on embedded index information
    -z                    paths are separated with NUL character
    -C <n>                ensure at least <n> lines of context match
    --whitespace <action>
                          detect new or modified lines that have whitespace errors
    --ignore-space-change
                          ignore changes in whitespace when finding context
    --ignore-whitespace   ignore changes in whitespace when finding context
    -R, --reverse         apply the patch in reverse
    --unidiff-zero        don't expect at least one line of context
    --reject              leave the rejected hunks in corresponding *.rej files
    --allow-overlap       allow overlapping hunks
    -v, --verbose         be verbose
    --inaccurate-eof      tolerate incorrectly detected missing new-line at the end of file
    --recount             do not trust the line counts in the hunk headers
    --directory <root>    prepend <root> to all filenames

WARNING: Test patch failed to apply.
Running tests...
/app/node_modules/@babel/code-frame/lib/index.js:1
# File truncated - use Sourcegraph MCP tools to read source
^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1662:18)
    at Module._compile (node:internal/modules/cjs/loader:1704:20)
    at Object..js (node:internal/modules/cjs/loader:1895:10)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1487:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/app/node_modules/parse-json/index.js:5:28)
/tests/test.sh: line 123: 0
0: syntax error in expression (error token is "0")
